# derive_value_object

./: Cargo.toml  README.md
src/: lib.rs  value_object.rs
tests/: test_derive_value_object.rs
