[package]
name = "derive_value_object"
version = "0.1.0"
authors = ["Mikhail Svetov <svmk-tmsk@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["extra-traits", "printing"]}
quote = "1.0"
darling = "0.12"
proc-macro2 = "1.0"
serde = "1.0"